--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Default ignored files
+/shelf/
+/.idea/workspace.xml
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,gradle
 
